<resources>
    <string name="app_name">LifeCounter</string>

    <string name="plus_button">+</string>
    <string name="minus_button">-</string>
    <string name="player_one_plus_button_text">Add life player one</string>
    <string name="player_one_minus_button_text">Take life player one</string>
    <string name="player_two_plus_button_text">Add life player two</string>
    <string name="player_two_minus_button_text">Take life player two</string>

    <string name="end_turn_text">End turn</string>
    <string name="end_turn_toast_text">Turn ended</string>

    <string name="player_one_default_name">Marie</string>
    <string name="player_two_default_name">Joe</string>

    <string name="menu_item_reset_game">Reset Game</string>
    <string name="menu_item_show_scoreboard">Show Scoreboard</string>
    <string name="menu_item_keep_awake">Keep Awake</string>

    <string name="list_item_score_format">%1$d - %2$d</string>

    <string name="reset_dialog_message">Would you also like to clear the scoreboard?</string>
    <string name="reset_dialog_yes">Yes</string>
    <string name="reset_dialog_no">No</string>
</resources>
