<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <Button
        android:id="@+id/end_turn_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/end_turn_text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/plus_button_margin"
        android:layout_marginRight="@dimen/plus_button_margin"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@id/end_turn_button"
        android:layout_toLeftOf="@id/end_turn_button"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_one_default_name"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/player_one_plus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/player_one_plus_button_text"
            android:text="@string/plus_button"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/player_one_score_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_one_default_name"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="40sp"
            tools:text="20"/>

        <Button
            android:id="@+id/player_one_minus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/player_one_minus_button_text"
            android:text="@string/minus_button"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/plus_button_margin"
        android:layout_marginLeft="@dimen/plus_button_margin"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/end_turn_button"
        android:layout_toRightOf="@id/end_turn_button"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_two_default_name"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/player_two_plus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/player_two_plus_button_text"
            android:text="@string/plus_button"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/player_two_score_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_two_default_name"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="40sp"
            tools:text="20"/>

        <Button
            android:id="@+id/player_two_minus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/player_two_minus_button_text"
            android:text="@string/minus_button"
            android:textSize="50sp" />
    </LinearLayout>


</RelativeLayout>